--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,c++,cmake,macos,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,c++,cmake,macos,windows
+# Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,macos,linux,cmake,c++,ninja
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,macos,linux,cmake,c++,ninja
 
 ### C++ ###
 # Prerequisites
@@ -77,7 +77,8 @@ CMakeUserPresets.json
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -101,6 +102,10 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
+
+### Ninja ###
+.ninja_deps
+.ninja_log
 
 ### VisualStudioCode ###
 .vscode/*
@@ -147,7 +152,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,c++,cmake,macos,windows
+# End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,macos,linux,cmake,c++,ninja
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+/*/build/*
